Fix nav-bar--fit
Only apply the fit CSS on wider screens, and forcibly remove borders as
they look wrong in this scenario.

--- a/_nav-bar.scss
+++ b/_nav-bar.scss
@@ -676,35 +676,38 @@ $fallback--ie9--hack: "all and (min-width: \0030\005C\0030) and (min-resolution:
 
 
 /* -- Fit layout -------------------------------------------------------------------------------- */
+    // We only want these adjustments on wider screens:
+    @media only screen and (min-width: $fallback--nav-bar--breakpoint--enhanced) {
+        .nav-bar--fit {}
 
-.nav-bar--fit {}
+            .nav-bar--fit .nav-bar__items {
+                display: -webkit-flex;
+                display: -ms-flexbox;
+                display: flex;
 
-    .nav-bar--fit .nav-bar__items {
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
+                -webkit-justify-content: space-around;
+                          -ms-flex-pack: distribute;
+                        justify-content: space-around;
+            }
 
-        -webkit-justify-content: space-around;
-                  -ms-flex-pack: distribute;
-                justify-content: space-around;
+
+            .nav-bar--fit .nav-bar__item {
+                -webkit-flex: 0 0 auto;
+                    -ms-flex: 0 0 auto;
+                        flex: 0 0 auto;
+                text-align: center;
+                // Borders don't really work in this scenario:
+                border: 0;
+            }
+
+            .nav-bar--fit .has-subnav {
+                display: -webkit-flex;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-justify-content: center;
+                          -ms-flex-pack: center;
+                        justify-content: center;
+            }
     }
-
-
-    .nav-bar--fit .nav-bar__item {
-        -webkit-flex: 0 0 auto;
-            -ms-flex: 0 0 auto;
-                flex: 0 0 auto;
-        text-align: center;
-    }
-
-    .nav-bar--fit .has-subnav {
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-justify-content: center;
-                  -ms-flex-pack: center;
-                justify-content: center;
-    }
-
 
 /* -----------------------------------------------------------------------------------------------*/
